# object-detector-rust

./: Cargo.toml  LICENSE  README.md  crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js  transcript.md
.github/workflows/: coverage.yml  docs.yml
benches/: benchmark.rs
docs/: object-detection-diagram.puml  training.puml
examples/: brief_svm.rs  example.rs  hog_svm.rs
object_detector_rust/: all.html  index.html  sidebar-items.js  struct.AnnotatedImage.html  struct.Annotation.html  struct.BBox.html  type.Class.html
object_detector_rust/bbox/: index.html  sidebar-items.js  struct.BBox.html
object_detector_rust/classifier/: index.html  sidebar-items.js  struct.BayesClassifier.html  struct.CombinedClassifier.html  struct.RandomForestClassifier.html  struct.SVMClassifier.html  trait.Classifier.html
object_detector_rust/dataset/: index.html  sidebar-items.js  struct.DummyDataSet.html  struct.FolderDataSet.html  struct.MemoryDataSet.html  trait.AnnotatedImageSet.html  trait.DataSet.html
object_detector_rust/detection/: fn.merge_overlapping_detections.html  index.html  sidebar-items.js  struct.Detection.html
object_detector_rust/detector/: index.html  sidebar-items.js  struct.BriefSVMDetector.html  struct.HOGSVMDetector.html  trait.Detector.html  trait.PersistentDetector.html
object_detector_rust/feature/: index.html  sidebar-items.js  struct.BriefFeature.html  struct.DummyFeature.html  struct.HOGFeature.html  trait.Feature.html
object_detector_rust/predictable/: index.html  sidebar-items.js  trait.Predictable.html
object_detector_rust/prelude/: index.html  sidebar-items.js  struct.BBox.html  struct.BayesClassifier.html  struct.BriefFeature.html  struct.BriefSVMDetector.html  struct.HOGFeature.html  struct.HOGSVMDetector.html  struct.MemoryDataSet.html  struct.PyramidWindow.html  struct.RandomForestClassifier.html  struct.SVMClassifier.html  struct.SlidingWindow.html
object_detector_rust/tests/: index.html  sidebar-items.js
object_detector_rust/trainable/: index.html  sidebar-items.js  trait.Trainable.html
object_detector_rust/types/: index.html  sidebar-items.js  struct.AnnotatedImage.html  struct.Annotation.html  struct.ImageWindow.html  type.Class.html
object_detector_rust/utils/: fn.add_hard_negative_samples.html  fn.crop_bbox.html  fn.draw_bboxes.html  fn.evaluate_accuracy.html  fn.evaluate_precision.html  fn.extract_data.html  fn.generate_annotations.html  fn.generate_negative_samples.html  fn.sliding_window.html  index.html  sidebar-items.js  struct.ImageWindow.html  struct.SlidingWindow.html  trait.WindowGenerator.html
object_detector_rust/window_generator/: index.html  sidebar-items.js  struct.PyramidWindow.html  struct.SlidingWindow.html  trait.WindowGenerator.html
src/: bbox.rs  detection.rs  lib.rs  predictable.rs  trainable.rs  utils.rs
src/classifier/: bayes_classifier.rs  combined_classifier.rs  mod.rs  randomforest_classifier.rs  svm_classifier.rs
src/dataset/: folder_dataset.rs  memory_dataset.rs  mod.rs
src/detector/: brief_svm_detector.rs  hog_svm_detector.rs  mod.rs
src/feature/: brief_feature.rs  hog_feature.rs  mod.rs
src/object_detector_rust/: bbox.rs.html  detection.rs.html  lib.rs.html  predictable.rs.html  trainable.rs.html  utils.rs.html
src/tests/: mod.rs  test_image.rs
src/types/: mod.rs
src/utils/: evaluate.rs  generate_annotations.rs  generate_negative_samples.rs  mod.rs  sliding_window.rs
src/window_generator/: mod.rs  (+2 more)
(+70 files in other folders)
