[package]
name = "object-detector-rust"
edition = "2021"
version = "0.1.0"
authors = ["Christian M <chriamue@gmail.com>"]
description = "A framework for detecting objects in images using feature-based algorithms."
license = "MIT"
repository = "https://github.com/chriamue/object-detector-rust"

# The package's dependencies
[dependencies]
image = { version = "0.24.3", default-features = false, features = [
    "png",
    "jpeg",
] }
imageproc = { version = "0.23.0", default-features = false }
linfa = "0.6.1"
linfa-svm = { version = "0.6.1", features = [
    "serde",
], default-features = false }
linfa-bayes = "0.6.1"
ndarray = "0.15.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# The package's dev dependencies
[dev-dependencies]

# The package's features
[features]
default = ["hog", "orb"]
hog = []
orb = []
