[package]
name = "object-detector-rust"
edition = "2021"
version = "0.1.1"
authors = ["Christian M <chriamue@gmail.com>"]
description = "A framework for detecting objects in images using feature-based algorithms."
license = "MIT"
repository = "https://github.com/chriamue/object-detector-rust"

# The package's dependencies
[dependencies]
bincode = "1.3.3"
image = { version = "0.24.3", default-features = false, features = [
    "png",
    "jpeg",
] }
imageproc = { version = "0.23.0", default-features = false }
linfa = "0.6.1"
linfa-svm = { version = "0.6.1", features = [
    "serde",
], default-features = false }
linfa-bayes = "0.6.1"
ndarray = "0.15.6"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smartcore = { version = "0.3.0", features = [
    "ndarray-bindings",
    "serde",
], default-features = false, git = "https://github.com/smartcorelib/smartcore", branch = "fix-245", optional = true }

# The package's dev dependencies
[dev-dependencies]
criterion = { version = "0.4", default-features = false }
mockall = "0.11.3"

# The package's features
[features]
default = ["hog", "brief", "randomforest"]
hog = []
brief = []
randomforest = ["smartcore"]

[[bench]]
name = "benchmark"
harness = false
