[package]
name = "object-detector-rust"
edition = "2021"
version = "0.1.3"
authors = ["Christian M <chriamue@gmail.com>"]
description = "A framework for detecting objects in images using feature-based algorithms."
license = "MIT"
repository = "https://github.com/chriamue/object-detector-rust"
keywords = [
    "machine-learning",
    "object-detection",
    "svm",
    "bayes",
    "random-forest",
]

[dependencies]
bincode = "1.3.3"
image = { version = "0.24.7", default-features = false, features = [
    "png",
    "jpeg",
] }
imageproc = { version = "0.23.0", default-features = false }
linfa = "0.7.0"
linfa-svm = { version = "0.7.0", features = [
    "serde",
], default-features = false }
linfa-bayes = "0.7.0"
ndarray = "0.15.6"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smartcore = { version = "0.3.1", features = [
    "ndarray-bindings",
    "serde",
], default-features = false, git = "https://github.com/smartcorelib/smartcore", optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }
mockall = "0.12.1"

[features]
default = ["hog", "brief", "randomforest"]
hog = []
brief = []
randomforest = ["smartcore"]

[[bench]]
name = "benchmark"
harness = false
